# DC_Intel

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  README.md  docker-compose.yml  handoff.md
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  main.py  scheduler.py
backend/app/auth/: deps.py  models.py  passwords.py  ratelimit.py  security.py
backend/app/auth/data/: common_passwords.txt
backend/app/cache/: redis.py
backend/app/calendar/: actuals.py  affected.py  affects.py  canonicalize.py  event_study.py  impact.py  merge.py  models.py  registry.py
backend/app/calendar/providers/: base.py  finnhub_calendar_provider.py  fred_provider.py  (+2 more)
backend/app/core/: alerts.py  errors.py  instrument.py  logging.py  metrics.py  middleware.py
backend/app/db/: connection.py  migrate.py  seed.py
backend/app/intel/: anomaly.py  cluster.py  cluster_store.py  config.py  confirm.py  credibility.py  dedup.py  embed.py  entities.py  feed.py  maintenance.py  models.py  normalize.py  scraper.py  whisper_config.py
backend/app/jobs/: calendar_sync.py  dashboard_builder.py  db_backup.py  event_study.py  fetch_actual.py  indicator_calculator.py  metrics_rollup.py  model_retrain.py  outcome_checker.py  price_poller.py  whisper_corroborator.py  win_rate_monitor.py
backend/app/market/: hours.py
backend/app/ml/: backfill.py  calibrate.py  config.py  dataset.py  explain.py  gate.py  split.py  train.py  xmkt.py
backend/app/providers/: base.py  breaker.py  finnhub_provider.py  fx_provider.py  pykrx_provider.py  retry.py  yfinance_bars.py  yfinance_provider.py
backend/app/routers/: auth.py  dashboard.py  health.py  predictions.py  stocks.py
backend/app/sentiment/: aggregate.py  classify.py  normalize.py  pipeline.py
backend/app/services/: fx.py  indicator_copy.py  indicator_pipeline.py  indicators.py  price.py  sparkline.py  xmkt.py
backend/app/tracking/: backfill.py  exit_price.py  grade.py  labels.py  retry.py
backend/migrations/: 001_initial_schema.sql  002_cross_market_bars.sql  003_whisper_numbers.sql
backend/tests/: _fakes.py  conftest.py  test_accuracy_endpoint.py  test_accuracy_repo.py  test_alerts.py  test_auth_deps.py  test_auth_models.py  test_auth_passwords.py  test_auth_router.py  test_auth_security.py  test_breaker.py  test_calendar_actuals.py  test_calendar_affects.py  test_calendar_affects_endpoint.py  test_calendar_canonicalize.py  test_calendar_merge.py  test_calendar_providers.py  test_calendar_registry.py  test_calendar_sync.py  test_compute_indicators.py  test_config.py  test_connection.py  test_cross_market_bars_repo.py  test_dashboard_builder.py  test_dashboard_calendar.py  test_dashboard_endpoints.py  test_dashboard_market_intel.py  test_db_backup.py  test_degradation.py  test_economic_events_repo.py  test_errors.py  test_event_study.py  test_event_study_job.py  test_exit_price.py  test_fetch_actual.py  test_finnhub_provider.py  test_fx_provider.py  test_fx_service.py  test_grade.py  test_health.py  (+84 more)
backend/tests/cassettes/: investing_calendar.json  whisper_earningswhispers.json  whisper_stocktwits.json  whisper_websearch.html
(+163 files in other folders)
