[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dc-intel-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "aiosqlite>=0.20",
    "redis>=5.0",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "yfinance>=0.2.40",
    "pykrx>=1.0.45",
    "tzdata>=2024.1",
    "apscheduler>=3.10",
    "pandas>=2.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "praw>=7.7",
    "langdetect>=1.0.9",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "email-validator>=2.1",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "fakeredis>=2.21", "anyio>=4.0", "respx>=0.21"]
# Heavy local ML (M4 sentiment + clustering). Lazy-imported by app/intel/embed.py +
# app/sentiment/classify.py, so the offline suite (which injects fakes) does NOT need these.
# Install locally with: uv pip install -e "./backend[dev,ml]"  (Docker installs [ml] for the
# real path). On Linux/Docker, use the CPU torch index to avoid the CUDA build.
ml = ["torch>=2.2", "transformers>=4.40", "sentence-transformers>=2.7",
      "scikit-learn>=1.4", "xgboost>=2.0", "shap>=0.45", "joblib>=1.3"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: hits real external APIs; excluded from the default run"]
addopts = "-m 'not live'"
